--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,20 @@ layout: default
     {{ content }}
   </div>
 
+  {% comment %}
+  <div class="post-categories">
+  {% if post %}
+    {% assign categories = post.categories %}
+  {% else %}
+    {% assign categories = page.categories %}
+  {% endif %}
+  {% for category in categories %}
+  <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+  {% unless forloop.last %}&nbsp;{% endunless %}
+  {% endfor %}
+</div>
+  {% endcomment %}
+  
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
