--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,8 @@ layout: default
     {{ content }}
   </div>
 
+  {% include advertising.html %}
+  
   {% comment %}
   <div class="post-categories">
   {% if post %}
