--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
     {{ content }}
   </div>
 
-  {% include advertising.html %}
+  {% include advertisements.html %}
   
   {% comment %}
   <div class="post-categories">
