--- a/HymnSite/styles.css
+++ b/HymnSite/styles.css
@@ -2,7 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #111;
+    color: #fff;
 }
 
 .container {
@@ -18,7 +19,7 @@ header {
 
 h1 {
     font-size: 2em;
-    color: #333;
+    color: #fff;
 }
 
 nav {
@@ -29,15 +30,17 @@ nav {
 input[type="text"] {
     padding: 10px;
     width: 80%;
-    border: 1px solid #ccc;
+    border: 1px solid #444;
     border-radius: 5px;
+    background-color: #222;
+    color: #fff;
 }
 
 main {
-    background-color: #fff;
+    background-color: #222;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 ul {
@@ -50,13 +53,18 @@ li {
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-bottom: 10px;
-    color: #444;
+    color: #fff;
+    cursor: pointer;
 }
 
 p {
     font-size: 1em;
     line-height: 1.5;
-    color: #666;
+    color: #ccc;
+}
+
+.hidden {
+    display: none;
 }
