--- a/HymnSite/styles.css
+++ b/HymnSite/styles.css
@@ -29,11 +29,21 @@ nav {
 
 input[type="text"] {
     padding: 10px;
-    width: 80%;
+    width: 60%;
     border: 1px solid #444;
     border-radius: 5px;
     background-color: #222;
     color: #fff;
+}
+
+button {
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    background-color: #222;
+    color: #fff;
+    cursor: pointer;
 }
 
 main {
@@ -67,4 +77,14 @@ p {
 
 .hidden {
     display: none;
+}
+
+.star {
+    cursor: pointer;
+    color: gold;
+}
+
+footer {
+    text-align: center;
+    margin-top: 20px;
 }
