--- a/HymnSite/styles.css
+++ b/HymnSite/styles.css
@@ -90,7 +90,8 @@ p {
 .star {
     cursor: pointer;
     color: gold;
-    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 1.2em;
 }
 
 footer {
