--- a/Wordle/styles.css
+++ b/Wordle/styles.css
@@ -1,11 +1,12 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f3f3f3;
 }
 
 .container {
@@ -22,7 +23,9 @@ body {
 .tile {
     width: 60px;
     height: 60px;
-    border: 2px solid #ddd;
+    border: 2px solid #444;
+    background-color: #1e1e1e;
+    color: #ffffff;
     font-size: 2rem;
     text-transform: uppercase;
     display: flex;
@@ -33,57 +36,16 @@ body {
 .tile.correct {
     background-color: #6aaa64;
     border-color: #6aaa64;
-    color: white;
 }
 
 .tile.present {
     background-color: #c9b458;
     border-color: #c9b458;
-    color: white;
 }
 
 .tile.absent {
     background-color: #787c7e;
     border-color: #787c7e;
-    color: white;
-}
-
-#keyboard {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.key {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    background-color: #eee;
-    border: 2px solid #ccc;
-    font-size: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    text-transform: uppercase;
-}
-
-.key.correct {
-    background-color: #6aaa64;
-    border-color: #6aaa64;
-    color: white;
-}
-
-.key.present {
-    background-color: #c9b458;
-    border-color: #c9b458;
-    color: white;
-}
-
-.key.absent {
-    background-color: #787c7e;
-    border-color: #787c7e;
-    color: white;
 }
 
 #message {
