--- a/Wordle02/styles.css
+++ b/Wordle02/styles.css
@@ -12,6 +12,7 @@ body {
 .container {
     text-align: center;
     position: relative;
+    display: flex;
 }
 
 #game {
@@ -90,10 +91,9 @@ body {
     border: 2px solid #ddd;
     padding: 20px;
     width: 200px;
-    position: absolute;
-    right: 10px;
-    top: 50px;
     background-color: #333;
     color: #fff;
     text-align: left;
+    margin-left: 30px; /* Add some space between the game field and the scorecard */
+    position: relative;
 }
