--- a/BHBHymnSite008/styles.css
+++ b/BHBHymnSite008/styles.css
@@ -140,3 +140,8 @@ body.light-theme {
     --main-background: #f5f5f5;
     --text-secondary-color: #333;
 }
+
+/* Add additional spacing between elements */
+#hymn-detail p + p {
+    margin-top: 15px;
+}
