--- a/BHBHymnSite009/styles.css
+++ b/BHBHymnSite009/styles.css
@@ -1,3 +1,4 @@
+
 /* Base styles for the body */
 body {
     font-family: Arial, sans-serif;
@@ -138,4 +139,9 @@ body.light-theme {
     --button-text: #000;
     --main-background: #f5f5f5;
     --text-secondary-color: #333;
+}
+
+/* Add additional spacing between elements */
+#hymn-detail p + p {
+    margin-top: 15px;
 }
