--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -25,6 +25,13 @@ header, nav, footer {
   text-align: center;
 }
 
+/* Keeps header always on screen */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 nav a {
   margin: 0 1em;
   color: #e0e0e0;
