--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -26,10 +26,14 @@ header, nav, footer {
 }
 
 /* Keeps header always on screen */
-header {
+.navbar {
   position: sticky;
   top: 0;
+  background-color: #1e1e1e;
   z-index: 1000;
+  padding: 1em;
+  text-align: center;
+  border-bottom: 1px solid #333;
 }
 
 nav a {
