--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -82,3 +82,40 @@ img {
   margin: 2em auto;
   padding: 0 1em;
 }
+
+/* Post Stylings on Main page */
+.post-preview {
+  border: 1px solid #444;
+  border-radius: 8px;
+  background-color: #181818;
+  padding: 1em;
+  margin: 2em 0;
+  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+}
+
+.post-preview h2 {
+  margin-top: 0;
+  color: #fff;
+}
+
+.post-preview a {
+  color: #88c0d0;
+  text-decoration: none;
+}
+
+.post-preview a:hover {
+  text-decoration: underline;
+}
+
+.post-date {
+  font-size: 0.9em;
+  color: #aaa;
+  margin-bottom: 1em;
+}
+
+.post-content {
+  line-height: 1.6;
+  color: #ddd;
+}
+/* End of Post Stylings on Main page */
+
