--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -119,3 +119,16 @@ img {
 }
 /* End of Post Stylings on Main page */
 
+.page-header {
+  background-color: #111;
+  padding: 2rem 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  border-radius: 0.5rem;
+}
+
+.page-title {
+  font-size: 2rem;
+  color: #ffffff;
+  margin: 0;
+}
