deploy: Atrion/atrion-blog@8d2429685f15f7ba5a9d78e51ff245f6e19c34ef

--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -134,7 +134,7 @@ img {
   margin: 0;
 }
 
-/* Makes writing be in a colored Box */
+/* Makes writing be in a colored Box 
 .writing-container {
   background-color: #1a1a1a;
   border: 1px solid #333;
@@ -144,3 +144,4 @@ img {
   margin-bottom: 2rem;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
+*/
