deploy: Atrion/atrion-blog@c7650f2e4ac6dca01baf17d938141570539c95d9

--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -162,3 +162,13 @@ img {
   white-space: pre-wrap;
 }
 
+/* Justification for each column */
+.two-column-poem div:first-child {
+  text-align: right;
+}
+
+.two-column-poem div:last-child {
+  text-align: left;
+}
+
+
