--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -217,9 +217,12 @@ img {
 
 .project-card img {
   width: 100%;
-  height: auto;
+  height: 100px;
+  object-fit: cover;
   display: block;
+  border-bottom: 1px solid #ccc;
 }
+
 
 .project-card h3 {
   font-size: 1.1rem;
