--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -216,13 +216,11 @@ img {
 }
 
 .project-card img {
-  width: 50%;
-  height: 200px;
-  object-fit: cover;
   display: block;
-  border-bottom: 1px solid #ccc;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
 }
-
 
 .project-card h3 {
   font-size: 1.1rem;
