--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   line-height: 1.6;
-  background-color: #121212;
+  background-color: #1e1e1e;
   color: #e0e0e0;
   margin: 0;
   padding: 0;
