--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
       <a href="/blog">Blog Archive</a> |
       <a href="/manifesto">Manifesto</a> |
       <a href="/writings">Writings</a> |
-      <a href="/tags">Tags</a> |
+<!--       <a href="/tags">Tags</a> | -->
       <a href="/about">About</a> |
-      <a href="/links">Links</a> |
+<!--       <a href="/links">Links</a> | -->
       <a href="/projects">Projects</a> 
     </nav>
 
