Restructure posts and writings, add QR generator
Moved blog posts into year/month subdirectories and organized writings into articles, devotional, and poems folders. Updated footer in default layout with new copyright and logo attribution. Added a new QR Code Generator page at /qr/ with customizable options and PNG export.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,8 +67,10 @@
   </main>
 
   <footer>
-    <p>© Atrion Darnay {{ "now" | date: "%Y" }}. All rights reserved.</p>
-  <!-- <a href="{{ '/rss.xml' | relative_url }}">RSS</a>  -->
+    <p>© {{ "now" | date: "%Y" }} Marc MacArthur. All rights reserved.<br>
+    From Gravel Hill&trade; • Logo design by Marc MacArthur</p>
+  <!-- <p>© Atrion Darnay {{ "now" | date: "%Y" }}. All rights reserved.</p>
+    <a href="{{ '/rss.xml' | relative_url }}">RSS</a>  -->
   </footer>
 
   
